force-app/main/default/objects/Proyecto__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <description>Detalle del proyecto.</description>
    <label>Descripcion</label>
    <type>TextArea</type>
</CustomField>