force-app/main/default/objects/Proyecto__c/fields/Estado_Resumen__c.field-meta.xml
<CustomField>
    <fullName>Estado_Resumen__c</fullName>
    <description>Evalúa el estado del proyecto y su proximidad a la fecha de inicio</description>
    <formula>IF(
    ISPICKVAL(Estado__c, &quot;Finalizado&quot;),
    &quot;Proyecto Completado&quot;,
    IF(
        AND(
            TODAY() &gt;= Fecha_de_inicio__c,
            ISPICKVAL(Estado__c, &quot;En Progreso&quot;)
        ),
        &quot;Proyecto Activo&quot;,
        &quot;Pendiente de Inicio&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado Resumen</label>
    <type>Text</type>
</CustomField>