force-app/main/default/objects/Proyecto__c/fields/Fecha_de_inicio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_inicio__c</fullName>
    <description>Fecha en la que inicia el proyecto.</description>
    <label>Fecha de inicio</label>
    <type>Date</type>
</CustomField>