force-app/main/default/objects/Proyecto__c/fields/Numero_de_Recursos__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Recursos__c</fullName>
    <description>Cantidad de recursos asignados.</description>
    <label>Numero de Recursos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>