force-app/main/default/objects/Proyecto__c/validationRules/Contact_Relacion_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Relacion_Account</fullName>
    <active>true</active>
    <errorConditionFormula>Contact__r.AccountId  &lt;&gt;  Account__r.Id</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Solo se pueden seleccionar contactos asociados a la cuenta del proyecto.</errorMessage>
</ValidationRule>