force-app/main/default/objects/Proyecto__c/validationRules/Fecha_de_Inicio_en_el_Pasado.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_de_Inicio_en_el_Pasado</fullName>
    <active>true</active>
    <errorConditionFormula>TODAY() &gt;  Fecha_de_inicio__c &amp;&amp; $Permission.Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorDisplayField>Fecha_de_inicio__c</errorDisplayField>
    <errorMessage>La fecha de inicio no puede estar en el pasado.</errorMessage>
</ValidationRule>