force-app/main/default/objects/Proyecto__c/validationRules/Modificar_Proyecto_Iniciado_o_finalizado.validationRule-meta.xml
<ValidationRule>
    <fullName>Modificar_Proyecto_Iniciado_o_finalizado</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(Estado__c, &apos;Finalizado&apos;) || ISPICKVAL(Estado__c, &apos;En Progreso&apos;)) &amp;&amp; $Permission.Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorDisplayField>Presupuesto__c</errorDisplayField>
    <errorMessage>No se puede modificar el presupuesto del proyecto luego de iniciado el mismo.</errorMessage>
</ValidationRule>