force-app/main/default/objects/Proyecto__c/validationRules/Presupuesto_Menor_A_5000.validationRule-meta.xml
<ValidationRule>
    <fullName>Presupuesto_Menor_A_5000</fullName>
    <active>true</active>
    <errorConditionFormula>Presupuesto__c &lt; 5000</errorConditionFormula>
    <errorDisplayField>Presupuesto__c</errorDisplayField>
    <errorMessage>El presupuesto mínimo permitido es $5000.</errorMessage>
</ValidationRule>